--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>array</h1>
-    <script src="function.js"></script>
+    <script src="arr.js"></script>
   </body>
 </html>
